test/failed-2/secret/subtyping/variants/ill-typed/variants-1.stella
// ERROR_UNEXPECTED_VARIANT_LABEL
language core;
extend with
  #structural-subtyping,
  #variants;

fn main(x : <| a : Nat, b : Bool |>) -> <| b : Bool |> {
  return x
}
